# automatic_analytics

./: .gitignore  README.md  create_landing_tables.py  load_data.py  naming_convention.md  project_plan.md  pyproject.toml  requirements_analysis.md  utils.py
dbt_transformations/macros/: safe_date_from_int.sql
dbt_transformations/models/bronze/crm/: _schema.yml  bronze_crm__product_info.sql  (+1 more)
dbt_transformations/models/silver/: silver_crm__product_info.sql  silver_crm__sales_details.sql
dbt_transformations/tests/: order_date_comes_first.sql
dg_orchestration/: README.md  pyproject.toml
dg_orchestration/dbt_transformations/: dbt_project.yml
dg_orchestration/dbt_transformations/models/bronze/crm/: _schema.yml  _sources.yml  bronze_crm__customer_info.sql
dg_orchestration/dbt_transformations/models/bronze/erp/: _schema.yml  _sources.yml  bronze_erp__customer_info.sql  bronze_erp__location.sql  bronze_erp__product_category.sql
dg_orchestration/dbt_transformations/models/gold/: _schema.yml  dim_customers.sql  dim_products.sql  fct_sales.sql
dg_orchestration/dbt_transformations/models/silver/: silver_crm__customer_info.sql  silver_erp__customer_info.sql  silver_erp__location.sql  silver_erp__product_category.sql
dg_orchestration/dbt_transformations/tests/: cost_always_positive.sql  start_date_always_before_end_date.sql
dg_orchestration/reports/: monthly_sales_report.qmd
dg_orchestration/src/dg_orchestration/defs/: assets.py  resources.py
dg_orchestration/src/dg_orchestration/defs/dbt_transformations/: defs.yaml
proj_planning/: data_architecture.md
(+2 files in other folders)
