[project]
name = "automatic-analytics"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "dagster>=1.11.13",
    "dagster-dbt>=0.27.13",
    "dbt-core>=1.10.13",
    "dbt-snowflake>=1.10.2",
    "pandas>=2.3.3",
    "snowflake-connector-python>=3.17.4",
]
