[project]
name = "dg_orchestration"
requires-python = ">=3.9,<3.14"
version = "0.1.0"
dependencies = [
    "dagster>=1.11.13",
    "dagster-dbt>=0.27.13",
    "dbt-core>=1.10.13",
    "dbt-snowflake>=1.10.2",
    "jupyter>=1.1.1",
    "matplotlib>=3.9.4",
    "pandas>=2.3.3",
    "seaborn>=0.13.2",
    "snowflake-connector-python>=3.17.4",
]

[dependency-groups]
dev = [
    "dagster-webserver",
    "dagster-dg-cli",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
force-include = { "pyproject.toml" = "pyproject.toml" }

[tool.dg]
directory_type = "project"

[tool.dg.project]
root_module = "dg_orchestration"
registry_modules = [
    "dg_orchestration.components.*",
]
